# ComfyUI-SAM3DRender

./: .gitignore  LICENSE  README.en.md  README.md  __init__.py  _env_config.py  comfy-env-root.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt
nodes/: __init__.py  server.py
nodes/render/: __init__.py  ply_compat.py  render_node.py  render_node_sam3d.py
nodes/sam3d/: __init__.py  load_sam3d_model.py  sam3d_gaussian_splatting.py
web/editor/: gs_render.html  gs_render_sam3d.html
web/editor/static/: main.js  style.css
web/js/: gs_render_sam3d_widget.js  gs_render_widget.js
workflows/: SAM3DGaussianSplatting.json  SAM3DGaussianSplatting_QIE.json
